cabal-version:       >=1.10

name:                random-walker
version:             0.1.0.0
synopsis:            Implements markov process for decryption.
description:         See Persi Diaconis
bug-reports:         https://github.com/fivegrant/random-walker/issues
license:             GPL
license-file:        LICENSE
author:              Five Grant (5@fivegrant.com)
maintainer:          Five Grant (5@fivegrant.com)
copyright:           Copyright 2020, Five Grant, All rights reserved.
category:            Mathematics
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable random-walker
  main-is:               Main.hs
  -- other-modules:      
  -- other-extensions:
  build-depends:       base, containers, matrix
  -- hs-source-dirs:
  default-language:    Haskell2010
